crates/math-core/tests/snapshots/error_test__double_prime_and_sub_super.snap
---
source: crates/math-core/tests/error_test.rs
expression: "f''_3^2"
---
Error: Duplicate subscript or superscript.
   ╭─[ <input>:1:6 ]
   │
 1 │ f''_3^2
   │      ┬  
   │      ╰── duplicate
───╯
